tweak: full width pages + table wrap bugfixes
+ neutral theme font size fix + menu focused mod b/w tab switching fix

--- a/repo/neutral/app.css
+++ b/repo/neutral/app.css
@@ -32,7 +32,9 @@
   font-size: 1.3rem !important;
 }
 .notion-frame .notion-scroller.vertical.horizontal .notion-page-content,
-.notion-overlay-container .notion-scroller.vertical .notion-page-content,
+.notion-overlay-container .notion-scroller.vertical .notion-page-content {
+  font-size: 15px !important;
+}
 .notion-frame
   .notion-scroller.vertical.horizontal
   .notion-page-content[style*='font-size: 14px'],
